
Calligra Plan current:
----------------------

* Add export to csv and ods

Release 2.6
-----------
* Fix bug 308855 -  Gantt chart: No tree structure in printed version

* Fix bug 307450 - Calligra Plan crash when adding subtask

* Always check appointments to avoid overbooking resources

* Fix bug 307450 - Crash when calculating schedule (in rcps_solver_solve)

* Add scheduling granularity

* PlanWork:
  Add gantt chart
  Update scheduling info when task has been rescheduled

* Fix bug: Send work package schedule info also when schedule is not top level schedule

* Performance charts:
  Show both effort- and cost based performance index values.
  Add charting of perfomance indices

* Enable dropping Plan project files into the Task Editor.

* Task Editor: Add a Task Module docker to ease project creation.
  This makes it possible to define typical solutions with multiple tasks,
  task dependencies, including resources and resource allocations.

* Reports export: Add option to output data into table.
  This will not use the reports layout.
  The "old" export option that tries to honour the layout is still available.

* Report designer usability improvements.
  Designer moved from a dialog into a view using dockers for editing.
  This removes the need for multi-layered dialogs.

* Bug 186639 -  Use a more "descriptive" mouse cursor for wiring tasks in the graphic

* Bug 286332 - Auto allocate selected resources to new tasks

* Improve printing:
    Add printing options to view configuration dialog
    Save/load option settings

Release 2.5:
------------
* Disable calculate action when calculating to avoid potential crash

* Fix bug 306734 - Crash when calculating schedule (in rcps_solver_solve)

* Fix crash when two dependent tasks are deleted in one go

* Fix bug 301888 - New: setting task duration messes up schedule

* Fix bug 301326 - Export to pdf does not respect reports page layout
