@@ -1,9 +1,10 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" >
-<kpartgui name="Calligra Plan" version="24">
+<kpartgui name="Calligra Plan" version="25">
     <MenuBar>
         <Menu name="file"><text>&amp;File</text>
             <Separator/>
             <Action name="file_createtemplate"/>
+            <Action name="file_createnewproject"/>
         </Menu>
        <Menu name="edit"><text>&amp;Edit</text>
             <Action name="edit_undo"/>
