@@ -2,6 +2,8 @@
 Calligra Plan current:
 ----------------------
 
+* Add a command to generate a new project from the current project
+
 * Add export to csv and ods
 
 Release 2.6
